# computational-social-epistemology

./: .buildinfo  .gitignore  0. Introduccion.html  0. Introduccion.md  2. Simulaciones espaciales.html  3. Dinamica de opiniones.html  3. Dinamica de opiniones.ipynb  4. Polarización con organismos centrales.html  4. Polarización con organismos centrales.ipynb  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.html  objects.inv  pyproject.toml  references.bib  references.html  references.md  requirements.txt  search.html  searchindex.js
_sources/: 3. Dinamica de opiniones.ipynb  README.md
computational_social_epistemology/: __init__.py  axelrod.py  base.py  game_of_life.py  metrics.py  opinion_dynamics.py  relative_agreement.py  schelling.py  spatial.py
computational_social_epistemology/jager_amblard/: __init__.py  analyzer.py  config_generation.py  heterogenous_jager_amblard.py  jager_amblard_model.py  samplers.py  schema.py  sensationalism.py
images/: convolution.png:Zone.Identifier  ra_update.gif:Zone.Identifier
social_epistemology/axelrod/: axelrod.ipynb
social_epistemology/pairwise_coordination/: README.md  network_plots.py  pairwise_coordination.ipynb
social_epistemology/pairwise_coordination/.ipynb_checkpoints/: classes-checkpoint.py
social_epistemology/polarization/: axelrod.ipynb
social_epistemology/polarization/.ipynb_checkpoints/: bounded_confidence-checkpoint.ipynb
social_epistemology/schelling_seggregation/: schellingSegregation.html
social_epistemology/zollman_effect/: zollman.ipynb
(+1 files in other folders)
