[tool.poetry]
name = "computational-social-epistemology"
version = "0.1.0"
description = "A project for running social scienecs models"
authors = ["jbardl <joaquin.bardauil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
scipy = "^1.14.1"
networkx = "^3.4.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
ipykernel = "^6.29.5"
tqdm = "^4.67.0"
tabulate = "^0.9.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
